// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/settings/repositoryLocationList matches snapshot with each type item 1`] = `
<div
  className="location-list"
>
  <t
    behaviour="move"
    onDrop={[Function]}
    orientation="vertical"
  >
    <n
      key="public"
    >
      <RepositoryLocationListItem
        index={0}
        item={
          Object {
            "repositoryLocationType": "public",
          }
        }
        items={
          Array [
            Object {
              "repositoryLocationType": "public",
            },
            Object {
              "repositoryLocationType": "device",
            },
            Object {
              "repositoryLocationType": "private",
            },
          ]
        }
        moveCard={[MockFunction]}
        onAddListItem={[MockFunction]}
        onLocalFolderPathChanged={[MockFunction]}
        onMoveItem={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
    <n
      key="device"
    >
      <RepositoryLocationListItem
        index={1}
        item={
          Object {
            "repositoryLocationType": "device",
          }
        }
        items={
          Array [
            Object {
              "repositoryLocationType": "public",
            },
            Object {
              "repositoryLocationType": "device",
            },
            Object {
              "repositoryLocationType": "private",
            },
          ]
        }
        moveCard={[MockFunction]}
        onAddListItem={[MockFunction]}
        onLocalFolderPathChanged={[MockFunction]}
        onMoveItem={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
    <n
      key="private"
    >
      <RepositoryLocationListItem
        index={2}
        item={
          Object {
            "repositoryLocationType": "private",
          }
        }
        items={
          Array [
            Object {
              "repositoryLocationType": "public",
            },
            Object {
              "repositoryLocationType": "device",
            },
            Object {
              "repositoryLocationType": "private",
            },
          ]
        }
        moveCard={[MockFunction]}
        onAddListItem={[MockFunction]}
        onLocalFolderPathChanged={[MockFunction]}
        onMoveItem={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
  </t>
  <CustomizedActionButton
    disabled={true}
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    menuProps={
      Object {
        "items": Array [
          Object {
            "disabled": true,
            "key": "private",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.private.label",
          },
          Object {
            "disabled": true,
            "key": "public",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.public.label",
          },
          Object {
            "disabled": true,
            "key": "device",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.device.label",
          },
          Object {
            "disabled": true,
            "key": "local",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.local.labelInBrowser",
          },
        ],
      }
    }
    text="settings.modelDefinitions.add"
  />
</div>
`;

exports[`components/settings/repositoryLocationList matches snapshot with no items 1`] = `
<div
  className="location-list"
>
  <t
    behaviour="move"
    onDrop={[Function]}
    orientation="vertical"
  />
  <CustomizedActionButton
    disabled={true}
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    menuProps={
      Object {
        "items": Array [
          Object {
            "disabled": true,
            "key": "private",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.private.label",
          },
          Object {
            "disabled": true,
            "key": "public",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.public.label",
          },
          Object {
            "disabled": true,
            "key": "device",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.device.label",
          },
          Object {
            "disabled": true,
            "key": "local",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.local.labelInBrowser",
          },
        ],
      }
    }
    text="settings.modelDefinitions.add"
  />
</div>
`;

exports[`components/settings/repositoryLocationList matches snapshot with public item 1`] = `
<div
  className="location-list"
>
  <t
    behaviour="move"
    onDrop={[Function]}
    orientation="vertical"
  >
    <n
      key="public"
    >
      <RepositoryLocationListItem
        index={0}
        item={
          Object {
            "repositoryLocationType": "public",
          }
        }
        items={
          Array [
            Object {
              "repositoryLocationType": "public",
            },
          ]
        }
        moveCard={[MockFunction]}
        onAddListItem={[MockFunction]}
        onLocalFolderPathChanged={[MockFunction]}
        onMoveItem={[MockFunction]}
        onPrivateRepositoryConnectionStringChanged={[MockFunction]}
        onRemoveListItem={[MockFunction]}
      />
    </n>
  </t>
  <CustomizedActionButton
    disabled={false}
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    menuProps={
      Object {
        "items": Array [
          Object {
            "disabled": false,
            "key": "private",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.private.label",
          },
          Object {
            "disabled": true,
            "key": "public",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.public.label",
          },
          Object {
            "disabled": false,
            "key": "device",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.device.label",
          },
          Object {
            "disabled": true,
            "key": "local",
            "onClick": [Function],
            "text": "settings.modelDefinitions.repositoryTypes.local.labelInBrowser",
          },
        ],
      }
    }
    text="settings.modelDefinitions.add"
  />
</div>
`;
